--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/zeckodb
+MONGODB_URI=mongodb+srv://zeckoinfo:Bobo19881@zeckov2.vuqon.mongodb.net/?retryWrites=true&w=majority&appName=ZeckoV2
 JWT_SECRET=BOBOLICI19881Maria19881
 PORT=5000
 CLOUDINARY_CLOUD_NAME=dfynqxd9t
@@ -11,3 +11,4 @@ EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
 CLIENT_URL=http://localhost:3000
 REACT_APP_API_URL=http://localhost:5000
+NODE_ENV=production
