--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start-server": "node server/server.js",
-    "start": "react-scripts start",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -14,7 +14,8 @@
     "create-admin": "node server/scripts/createFirstAdmin.js",
     "test-mongo": "node server/scripts/testMongo.js",
     "basic-test": "node server/scripts/basicTest.js",
-    "debug-admin": "node server/scripts/debugAdmin.js"
+    "debug-admin": "node server/scripts/debugAdmin.js",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
