--- a/package.json
+++ b/package.json
@@ -1,68 +1,30 @@
 {
   "name": "zeckov2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/server.js",
+  "engines": {
+    "node": "20.18.0",
+    "npm": "10.9.0"
+  },
   "scripts": {
     "start": "node server/server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server/server.js",
-    "dev": "nodemon server/server.js",
-    "create-admin": "node server/scripts/createFirstAdmin.js",
-    "test-mongo": "node server/scripts/testMongo.js",
-    "basic-test": "node server/scripts/basicTest.js",
-    "debug-admin": "node server/scripts/debugAdmin.js"
+    "heroku-postbuild": "npm install --force && npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@stripe/react-stripe-js": "^2.8.1",
-    "@stripe/stripe-js": "^4.9.0",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
-    "csv-writer": "^1.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3",
-    "nodemailer": "^6.9.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "react-router-dom": "^6.11.0",
-    "react-scripts": "^5.0.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "stripe": "^17.2.1",
-    "styled-components": "^5.3.10",
-    "zxcvbn": "^4.4.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "concurrently": "^9.0.1",
-    "nodemon": "^3.1.7"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ]
+    "express": "4.17.1",
+    "mongoose": "6.0.0",
+    "cors": "2.8.5",
+    "dotenv": "16.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-router-dom": "6.0.0",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1",
+    "stripe": "17.2.1",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "9.0.0",
+    "styled-components": "5.3.10"
   }
 }
