--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
   "scripts": {
     "start": "node server/server.js",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm install --force && npm run build"
+    "heroku-postbuild": "npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
-    "express": "4.17.1",
-    "mongoose": "6.0.0",
+    "@testing-library/dom": "10.4.0",
+    "@types/aria-query": "5.0.4",
+    "ajv": "6.12.6",
+    "aria-query": "5.3.0",
+    "bcryptjs": "2.4.3",
+    "chalk": "4.1.2",
     "cors": "2.8.5",
+    "dequal": "2.0.3",
+    "dom-accessibility-api": "0.5.16",
     "dotenv": "16.0.0",
+    "express": "4.17.1",
+    "json-schema-traverse": "0.4.1",
+    "jsonwebtoken": "9.0.0",
+    "lz-string": "1.5.0",
+    "mongoose": "6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "6.0.0",
+    "react-scripts": "5.0.1",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1",
     "stripe": "17.2.1",
-    "bcryptjs": "2.4.3",
-    "jsonwebtoken": "9.0.0",
-    "styled-components": "5.3.10"
+    "styled-components": "5.3.10",
+    "typescript": "4.9.5"
   }
 }
