--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
+# dependencies
 node_modules/
+node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
 build/
-.env
+
+# misc
 .DS_Store
-npm-debug.log
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
