--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "dequal": "2.0.3",
     "dom-accessibility-api": "0.5.16",
     "dotenv": "16.0.0",
-    "express": "4.17.1",
+    "express": "^4.21.1",
     "json-schema-traverse": "0.4.1",
     "jsonwebtoken": "9.0.0",
     "lz-string": "1.5.0",
-    "mongoose": "6.0.0",
+    "mongoose": "^6.13.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1",
     "stripe": "17.2.1",
