--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
-    "node": "20.18.0",
-    "npm": "10.9.0"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "start": "node server/server.js",
