--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@testing-library/dom": "10.4.0",
     "@types/aria-query": "5.0.4",
-    "ajv": "6.12.6",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "aria-query": "5.3.0",
     "bcryptjs": "2.4.3",
     "chalk": "4.1.2",
