--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@testing-library/dom": "10.4.0",
     "@types/aria-query": "5.0.4",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "aria-query": "5.3.0",
@@ -30,16 +32,15 @@
     "mongoose": "^6.13.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "6.0.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.6",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1",
     "stripe": "17.2.1",
     "styled-components": "5.3.10",
-    "zxcvbn": "^4.4.2",
-    "@zxcvbn-ts/core": "^3.0.4",
-    "@zxcvbn-ts/language-common": "^3.0.4",
-    "react-feather": "^2.0.10"
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "typescript": "^4.9.5"
