--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "react-feather": "^2.0.10",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
