--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-toastify": "^9.1.3",
     "clsx": "^1.2.1",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "typescript": "^4.9.5",
