--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   "dependencies": {
     "@testing-library/dom": "10.4.0",
     "@types/aria-query": "5.0.4",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "aria-query": "5.3.0",
+    "axios": "^1.6.0",
     "bcryptjs": "2.4.3",
     "chalk": "4.1.2",
+    "chart.js": "^4.4.0",
+    "clsx": "^1.2.1",
     "cors": "2.8.5",
+    "date-fns": "^4.1.0",
     "dequal": "2.0.3",
     "dom-accessibility-api": "0.5.16",
     "dotenv": "16.0.0",
@@ -29,25 +35,20 @@
     "lz-string": "1.5.0",
     "mongoose": "^6.13.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "6.0.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1",
     "stripe": "17.2.1",
     "styled-components": "5.3.10",
-    "zxcvbn": "^4.4.2",
-    "@zxcvbn-ts/core": "^3.0.4",
-    "@zxcvbn-ts/language-common": "^3.0.4",
-    "react-feather": "^2.0.10",
-    "react-toastify": "^9.1.3",
-    "clsx": "^1.2.1",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^4.1.0"
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "typescript": "^4.9.5"
   }
 }
