--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
-# dependencies
-node_modules/
-node_modules
-/.pnp
-.pnp.js
+# Dependencies
+/node_modules
+/client/node_modules
 
-# testing
-/coverage
+# Production
+/client/build
 
-# production
-/build
-build/
-
-# misc
+# Misc
 .DS_Store
 .env
 .env.local
@@ -19,7 +13,6 @@ build/
 .env.test.local
 .env.production.local
 
-# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
