--- a/client/package.json
+++ b/client/package.json
@@ -1,1 +1,54 @@
- 
+{
+  "name": "zeckov2-client",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/dom": "10.4.0",
+    "@types/aria-query": "5.0.4",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "aria-query": "5.3.0",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^4.1.0",
+    "dequal": "2.0.3",
+    "dom-accessibility-api": "0.5.16",
+    "json-schema-traverse": "0.4.1",
+    "lz-string": "1.5.0",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "6.0.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "4.8.1",
+    "styled-components": "5.3.10",
+    "zxcvbn": "^4.4.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+} 
