--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "4.8.1",
     "styled-components": "5.3.10",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
