--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/runtime": "^7.23.2",
     "@testing-library/dom": "10.4.0",
     "@types/aria-query": "5.0.4",
     "@zxcvbn-ts/core": "^3.0.4",
@@ -27,11 +30,11 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "4.8.1",
     "styled-components": "5.3.10",
-    "zxcvbn": "^4.4.2",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/core": "^7.23.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
