--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/runtime": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime": "^7.22.5",
     "@testing-library/dom": "10.4.0",
     "@types/aria-query": "5.0.4",
     "@zxcvbn-ts/core": "^3.0.4",
@@ -14,6 +15,8 @@
     "ajv-keywords": "^3.5.2",
     "aria-query": "5.3.0",
     "axios": "^1.6.0",
+    "babel-loader": "^9.1.2",
+    "babel-preset-react-app": "^10.0.1",
     "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^4.1.0",
@@ -33,7 +36,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "typescript": "^4.9.5"
   },
