--- a/client/.env.development
+++ b/client/.env.development
@@ -1,1 +1,4 @@
- 
+REACT_APP_API_URL=http://localhost:5000
+REACT_APP_SOCKET_URL=http://localhost:5000
+SKIP_PREFLIGHT_CHECK=true
+GENERATE_SOURCEMAP=true 
