--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,4 @@
- 
+REACT_APP_API_URL=https://zeckov2-deceb43992ac.herokuapp.com
+REACT_APP_SOCKET_URL=https://zeckov2-deceb43992ac.herokuapp.com
+SKIP_PREFLIGHT_CHECK=true
+GENERATE_SOURCEMAP=false 
