--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install --legacy-peer-deps --force && SKIP_PREFLIGHT_CHECK=true DISABLE_ESLINT_PLUGIN=true npm run build"
+    "heroku-postbuild": "cd client && npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
-    "date-fns": "^4.1.0",
     "dotenv": "16.0.0",
-    "express": "^4.21.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "9.0.0",
-    "mongoose": "^6.13.3",
-    "socket.io": "4.8.1",
+    "mongoose": "^7.6.3",
+    "socket.io": "^4.7.2",
     "stripe": "17.2.1"
   },
   "cacheDirectories": [
