--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "6.0.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "9.1.3",
+    "rxjs": "^7.8.1",
     "socket.io-client": "4.8.1",
     "styled-components": "5.3.10",
     "zxcvbn": "4.4.2"
