--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "heroku-postbuild": "cd client && npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
-    "date-fns": "^4.1.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "16.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "9.0.0",
     "mongoose": "^7.6.3",
+    "react-icons": "^5.3.0",
     "socket.io": "^4.7.2",
     "stripe": "17.2.1"
   },
