--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "dom-accessibility-api": "0.5.16",
     "json-schema-traverse": "0.4.1",
     "lz-string": "1.5.0",
+    "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "^18.2.0",
