--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.6.3",
     "react-icons": "^5.3.0",
     "socket.io": "^4.7.2",
+    "speakeasy": "^2.0.0",
     "stripe": "17.2.1"
   },
   "cacheDirectories": [
