--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,55 @@
 # Dependencies
 node_modules/
 client/node_modules/
+/.pnp
+.pnp.js
 
 # Production
 /client/build
+/build
+/dist
 
-# Misc
-.DS_Store
+# Development
+/coverage
+/.nyc_output
+/.eslintcache
+*.log
+logs/
+*.swp
+
+# Environment
 .env
 .env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+debug.log
 
 # IDE
 .idea/
 .vscode/
+*.sublime-*
+*.code-workspace
+
+# OS
+.DS_Store
+Thumbs.db
+*.tmp
+*.temp
+
+# Optional
+/docs
+*.md
+/test
+/__tests__
+*.test.js
+*.spec.js
