--- a/client/package.json
+++ b/client/package.json
@@ -36,8 +36,11 @@
     "react-toastify": "9.1.3",
     "rxjs": "^7.8.1",
     "socket.io-client": "4.8.1",
-    "styled-components": "5.3.10",
-    "zxcvbn": "4.4.2"
+    "styled-components": "^5.3.10",
+    "zxcvbn": "4.4.2",
+    "framer-motion": "^6.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6"
   },
   "scripts": {
     "start": "react-scripts start",
