--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "heroku-postbuild": "cd server && npm install && cd ../client && npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "16.0.0",
     "express": "^4.18.2",
+    "framer-motion": "^6.5.1",
     "jsonwebtoken": "9.0.0",
     "mongoose": "^7.6.3",
     "react-icons": "^5.3.0",
