--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,52 @@
 # Dependencies
 node_modules/
-client/node_modules/
 /.pnp
 .pnp.js
 
+# Testing
+/coverage
+
 # Production
-/client/build
 /build
 /dist
-
-# Development
-/coverage
-/.nyc_output
-/.eslintcache
-*.log
-logs/
-*.swp
 
 # Environment
 .env
 .env.local
-.env.*.local
-.env.development
-.env.test
-.env.production
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-debug.log
 
-# IDE
+# Editor directories and files
 .idea/
 .vscode/
-*.sublime-*
-*.code-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# OS
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
-*.tmp
-*.temp
 
-# Optional
-/docs
-*.md
-/test
-/__tests__
-*.test.js
-*.spec.js
+# Build artifacts
+*.log
+*.pid
+*.seed
+*.pid.lock
+
+# Cache directories
+.npm
+.eslintcache
+.stylelintcache
