--- a/package.json
+++ b/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "zeckov2",
+  "name": "zecko-platform",
   "version": "1.0.0",
-  "main": "server/server.js",
-  "engines": {
-    "node": "20.x",
-    "npm": "10.x"
-  },
-  "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "cd server && npm install && cd ../client && npm install --legacy-peer-deps && npm run build"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "bcryptjs": "2.4.3",
-    "cors": "2.8.5",
-    "date-fns": "^4.1.0",
-    "dotenv": "16.0.0",
-    "express": "^4.18.2",
-    "framer-motion": "^6.5.1",
-    "jsonwebtoken": "9.0.0",
-    "mongoose": "^7.6.3",
-    "react-icons": "^5.3.0",
-    "socket.io": "^4.7.2",
-    "speakeasy": "^2.0.0",
-    "stripe": "17.2.1"
-  },
-  "cacheDirectories": [
-    "node_modules",
-    "client/node_modules"
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
   ],
+  "scripts": {
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev:client": "npm run dev --workspace=client",
+    "dev:server": "npm run dev --workspace=server",
+    "build": "npm run build --workspaces",
+    "start": "node server/dist/index.js",
+    "test": "npm run test --workspaces",
+    "lint": "npm run lint --workspaces",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+  },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "concurrently": "^8.2.2",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.3"
   }
 }
