--- a/.gitignore
+++ b/.gitignore
@@ -8,21 +8,21 @@ node_modules/
 
 # Production
 /build
-/dist
+/client/build
 
-# Environment
+# Misc
+.DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# IDE
 .idea/
 .vscode/
 *.suo
