--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "zecko-platform",
   "version": "1.0.0",
-  "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
-  "scripts": {
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "dev:client": "npm run dev --workspace=client",
-    "dev:server": "npm run dev --workspace=server",
-    "build": "npm run build --workspaces",
-    "start": "node server/dist/index.js",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.3"
-  }
+  "scripts": {
+    "start": "node server/index.js",
+    "build": "cd client && npm install && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ]
 }
