--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "zecko-platform",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "start": "node server/index.js",
@@ -13,5 +13,9 @@
   "cacheDirectories": [
     "node_modules",
     "client/node_modules"
-  ]
+  ],
+  "dependencies": {
+    "@mui/material": "^6.1.6",
+    "@mui/system": "^6.1.6"
+  }
 }
