--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "npm": "10.x"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "build": "cd client && npm install && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
@@ -15,6 +16,18 @@
     "client/node_modules"
   ],
   "dependencies": {
-    "node-modules": "^1.0.0"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.0.0",
+    "socket.io": "^4.0.0",
+    "cloudinary": "^1.37.0",
+    "stripe": "^12.0.0",
+    "nodemailer": "^6.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
