--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.0",
     "framer-motion": "^10.0.0",
