--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^5.14.0",
+    "@mui/icons-material": "^5.14.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "styled-components": "^5.3.10",
     "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0",
+    "axios": "^1.7.4",
     "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.1.13"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
