--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.14.0",
-    "@mui/icons-material": "^5.14.0",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "styled-components": "^5.3.10",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.7.4",
-    "framer-motion": "^10.0.0",
+    "@mui/material": "^5.14.20",
+    "@mui/icons-material": "^5.14.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.10",
+    "web-vitals": "^2.1.4",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
+  },
+  "resolutions": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
