--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.20",
     "@mui/icons-material": "^5.14.20",
+    "@mui/material": "^5.14.20",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4",
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
+    "web-vitals": "^2.1.4"
   },
   "resolutions": {
     "ajv": "^8.12.0",
