--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "path": "^0.12.7",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.4"
+    "express-rate-limit": "^7.1.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
