--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
