--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "axios": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,3 +45,4 @@
     ]
   }
 }
+
