--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.14.0",
-    "@mui/styles": "^5.14.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.0",
+    "@mui/styles": "^5.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4",
     "react-toastify": "^9.1.3",
-    "axios": "^1.6.2"
+    "styled-components": "^5.3.11",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,4 +46,3 @@
     ]
   }
 }
-
