--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.12.3",
-    "socket.io": "^4.7.2",
-    "cloudinary": "^1.41.0",
-    "stripe": "^14.5.0",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
-    "compression": "^1.7.4",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.4",
-    "speakeasy": "^2.0.0"
+    "socket.io": "^4.7.2",
+    "speakeasy": "^2.0.0",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "nodemon": "^3.0.1"
   }
 }
