--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "stripe": "^14.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.20",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "nodemon": "^3.0.1"
