--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "framer-motion": "^10.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
