--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
-    "framer-motion": "^10.16.4"
+    "framer-motion": "^10.16.4",
+    "qrcode.react": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
