--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
     "framer-motion": "^10.16.4",
-    "qrcode.react": "^3.1.0"
+    "qrcode.react": "^3.1.0",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
