--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "web-vitals": "^2.1.4",
     "framer-motion": "^10.16.4",
     "qrcode.react": "^3.1.0",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "chart.js": "^4.4.1",
+    "react-chartjs-2": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
