--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "qrcode.react": "^3.1.0",
     "zxcvbn": "^4.4.2",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "date-fns": "^2.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
