--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "zxcvbn": "^4.4.2",
     "chart.js": "^4.4.1",
     "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "socket.io-client": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
