--- a/client/package.json
+++ b/client/package.json
@@ -57,5 +57,6 @@
     "@babel/core": "^7.22.20",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
