--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "zecko-platform",
+  "name": "zeckov2",
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18.20.5",
-    "npm": "9.9.3"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install --legacy-peer-deps && GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=4096 npm run build",
-    "build": "cd client && npm run build"
+    "start": "node server/index.js",
+    "server": "nodemon server/index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm install && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "express": "^4.18.2",
